# dit_exercise

./: README.md  pyproject.toml
dateparser/: dateparse.py
tests/: test_parse.py
