[tool.poetry]
name = "dit-exercise"
version = "0.1.0"
description = ""
authors = ["Tomos Williams <tomos.williams@cetrix.co.uk>"]
readme = "README.md"
packages = [{include = "dit_exercise"}]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.3"
black = "^22.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
